# MFG_FLASH_TOOL

./: .qmake.stash  About.qml  Aboutpage.qml  CMakeLists.txt  Communication.qml  Flashcmd.qml  GeneraPopup.qml  Helppage.qml  Hide.qrc  LICENSE  Makefile  Makefile.Debug  Makefile.Release  Openfile.qml  Productinfo.qml  Protocols.qml  README.md  Resources.qrc  Savefile.qml  SerialCommunication.cpp  SerialCommunication.h  Settingspage.qml  Show.qrc  UUU_Tool  UUU_Tool.pro  UUU_Tool.pro.user.0eb7439  UUU_Tool.pro.user.297e4a8  UUU_Tool.pro.user.afdf093  UUU_Tool.pro.user.ce0a9b7  UUU_Tool.pro.user.f237794  commandLauncher.cpp  commandLauncher.h  data.cpp  data.h  devicepop.cpp  devicepop.h  main.cpp  main.moc  main.qml  moc_SerialCommunication.cpp  (+12 more)
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: QCoreApplication.A8C6FE9B21C500D3.idx  QDebug.DDEA87C15244C08C.idx  QDir.EE734D361252034D.idx  QFile.C1CD4F3E6B58E2D3.idx  QGuiApplication.C24CD058656B74F8.idx  QGuiApplication.C4BA4725705746E0.idx  QIcon.0856C5ED1A157A9C.idx  QIcon.7A9E72A67DB5545A.idx  QList.9A1A4502BF26067E.idx  QMap.CF75CCC07FCC9284.idx  QMetaType.44D29BFAC7F84E94.idx  QObject.823565265E13A238.idx  QProcess.B8B80F171127D855.idx  QQmlApplicationEngine.1351E617B2384ED1.idx  QQmlApplicationEngine.4E06C34924EBA80D.idx  QQmlComponent.F5DFD2C3D575CED3.idx  QQmlContext.74B47F6007C5E123.idx  QQuickStyle.1F5C2C1D789BDECB.idx  QQuickStyle.1FEE215A75AA11CD.idx  QSerialPort.89DAF5157AFBCEA1.idx  QSerialPortInfo.83417249C4248BA8.idx  QString.9549103237F8932F.idx  QStringListModel.E18A9B3BD786F345.idx  QTextStream.8905E825428BA2DD.idx  QTimer.4B06956989F39B00.idx  QVariant.6A5440595802AA1F.idx  QVariantMap.AE13E0A220BBA3A3.idx  QtMessageHandler.5435F4E8C5FC190E.idx  SerialCommunication.cpp.76BF7C0950E0A5AA.idx  SerialCommunication.cpp.A520CAD22A6920C1.idx  SerialCommunication.h.A18DFBFFDBCD3B3A.idx  SerialCommunication.h.E743A95ACDB3E1EB.idx  __stddef_max_align_t.h.BDE3808889EB933A.idx  _mingw.h.4ABA13A037B19B0D.idx  _mingw_ddk.h.F86B703A1A157D93.idx  _mingw_mac.h.22AED6619A3075AD.idx  _mingw_off_t.h.4E1AF48C3BD3AB78.idx  _mingw_secapi.h.277421B0335B8CB0.idx  _mingw_stat64.h.25B38093FB2ACA85.idx  _timeval.h.2B126B9F59ABEE51.idx  (+600 more)
BuildOutput/AiraaButtonPlugin/: qmldir
BuildOutput/AiraaComboBoxPlugin/: qmldir
BuildOutput/AiraaTextFieldPlugin/: qmldir
Communication/: Communication.qml
UUU_Tool_Components/AiraaButton/: AiraaButton.qml  CMakeLists.txt
UUU_Tool_Components/AiraaComboBox/: AiraaComboBox.qml  CMakeLists.txt
UUU_Tool_Components/AiraaTextField/: AiraaTextField.qml  CMakeLists.txt
debug/: qrc_Resources.cpp  qrc_qml.cpp
